--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,17 @@
 <h1>New article</h1>
 
 <%= form_for :article, url: articles_path do |f| %>
+	<% if @article && @article.errors.any? %>
+	<p>
+		<ul>
+		<% @article.errors.full_messages.each do |msg| %>
+			<li>
+				<%= msg %>
+			</li>
+		<% end %>
+		</ul>
+	</p>
+	<% end %>
 	<p>
 		<%= f.label :title %><br />
 		<%= f.text_field :title %>
@@ -11,6 +22,6 @@
 		<%= f.text_area :text %>
 	</p>
 	<p>
-		<%= f.submit %>
+		<%= f.submit 'Send article'%>
 	</p>
 <% end %>
