--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,17 @@
 <h2>List of articles</h2>
-<br />
 <% @articles.each do |art| %>
-		<p>
-			<span style="font-size: 150%; color: black ">Title: </span>
+	<p>
+		<h3>
 			<%= art.title %>
-			<br />
-			<br />
+		</h3>
+		<br />
 			<%= art.text %>
-			<br />
-			<br />
-			Создан: <%= art.created_at %>
-		</p>
+		<br />
+		<br />
+		Создан: <%= art.created_at %>
+		<%= link_to 'Show', article_path(art) %> |
+		<%= link_to 'Edit', edit_article_path(art) %>
+	</p>
 	<hr />
 <% end %>
 
