--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,8 @@
 		<br />
 		Создан: <%= art.created_at %>
 		<%= link_to 'Show', article_path(art) %> |
-		<%= link_to 'Edit', edit_article_path(art) %>
+		<%= link_to 'Edit', edit_article_path(art) %> |
+		<%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %>
 	</p>
 	<hr />
 <% end %>
