--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,20 @@
 <p>
 	<%= @article.text %>
 </p>
+<p>
+	<%= form_for([@article, @article.comments.build]) do |f| %>
+<p>
+		<%= f.label :autor %><br />
+		<%= f.text_field :autor %>
+	</p>
+
+	<p>
+		<%= f.label :body %><br />
+		<%= f.text_area :body %>
+	</p>
+	<p>
+		<%= f.submit 'Send comment'%>
+	</p>
+	<% end %>
+
+</p>
