--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
 <p>
 	<%= @article.text %>
 </p>
+<h2> Add comments </h2>
 <p>
 	<%= form_for([@article, @article.comments.build]) do |f| %>
 <p>
@@ -18,6 +19,7 @@
 	</p>
 	<% end %>
 </p>
+<h2> Comments </h2>
 <hr />
 <p>
 	<% @article.comments.each do |art| %>
