--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<a href="/users/sign_in">Sing in</a> | <a href="/users/sign_out" data-method = "delete">Sing Out</a>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
