--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,27 +1,32 @@
 <h1>New article</h1>
 
-<%= form_for :article, url: articles_path do |f| %>
-	<% if @article && @article.errors.any? %>
-	<p>
-		<ul>
-		<% @article.errors.full_messages.each do |msg| %>
-			<li>
-				<%= msg %>
-			</li>
-		<% end %>
-		</ul>
-	</p>
-	<% end %>
-	<p>
-		<%= f.label :title %><br />
-		<%= f.text_field :title %>
-	</p>
+<div class = "container">
+	<div class = "row">
+		<%= form_for :article, url: articles_path do |f| %>
+			<% if @article && @article.errors.any? %>
+			<p>
+				<ul>
+				<% @article.errors.full_messages.each do |msg| %>
+					<li>
+						<%= msg %>
+					</li>
+				<% end %>
+				</ul>
+			</p>
+			<% end %>
+			<p>
+				<%= f.label :title %><br />
+				<%= f.text_field :title %>
+			</p>
 
-	<p>
-		<%= f.label :text %><br />
-		<%= f.text_area :text %>
-	</p>
-	<p>
-		<%= f.submit 'Send article'%>
-	</p>
-<% end %>
+			<p>
+				<%= f.label :text %><br />
+				<%= f.text_area :text %>
+			</p>
+			<p>
+			<button type="submit" class="btn btn-success">Send article</button>
+				<!-- <%= f.submit 'Send article'%> -->
+			</p>
+		<% end %>
+	</div>
+</div>
