--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,48 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if user_signed_in? %>
-	Hello, <%= current_user.username %> | <%= link_to 'Sign out' , destroy_user_session_path, method: :delete %>
-<% else %>
-	<%= link_to 'Sign in' , new_user_session_path %>
-<% end %>
+		<div class="container">
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+			<!-- Static navbar -->
+			<nav class="navbar navbar-default" role="navigation">
+			  <div class="navbar-header">
+			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			      <span class="sr-only">Toggle navigation</span>
+			      <span class="icon-bar"></span>
+			      <span class="icon-bar"></span>
+			      <span class="icon-bar"></span>
+			    </button>
+			    <a class="navbar-brand" href="/">Blog on RoR</a>
+			  </div>
+			  <div class="navbar-collapse collapse">
+			    <ul class="nav navbar-nav">
+			      <li><a href="/articles">Articles</a></li>
+			      <li><a href="/articles/new">New</a></li>
+			      <li><a href="/contacts">Contacts</a></li>
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+				    <li><a href="/">Link</a></li>
+			    </ul>
+			  </div><!--/.nav-collapse -->
+			</nav>
 
-<%= yield %>
+			<div>
+				<% if user_signed_in? %>
+					Hello, <%= current_user.username %> | <%= link_to 'Sign out' , destroy_user_session_path, method: :delete %>
+				<% else %>
+					<%= link_to 'Sign in' , new_user_session_path %>
+				<% end %>
 
-</body>
+				<p class="notice"><%= notice %></p>
+				<p class="alert"><%= alert %></p>
+
+				<%= yield %>
+
+			</div>
+
+	</div>
+
+
+
+	</body>
 </html>
