--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,14 +2,13 @@
 <p>
 	<%= @article.text %>
 </p>
+<br />
+<p>
+	Автор: <%= @article.username %> Создан: <%= @article.created_at %>
+</p>
 <h2> Add comments </h2>
 <p>
 	<%= form_for([@article, @article.comments.build]) do |f| %>
-<!-- 		<p>
-			<%= f.label :autor %><br />
-			<%= f.text_field :autor %>
-		</p>
- -->
 		<p>
 			<%= f.label :body %><br />
 			<%= f.text_area :body %>
