--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,9 +9,12 @@
 		<br />
 		<br />
 		Автор: <%= art.username %> Создан: <%= art.created_at %>
-		<%= link_to 'Show', article_path(art) %> |
-		<%= link_to 'Edit', edit_article_path(art) %> |
-		<%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %>
+		<%= link_to 'Show', article_path(art) %> 
+		<% if art.username == current_user.username %>
+			|
+			<%= link_to 'Edit', edit_article_path(art) %> |
+			<%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %>
+		<% end %>
 	</p>
 	<hr />
 <% end %>
