--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
 		<br />
 		Автор: <%= art.username %> Создан: <%= art.created_at %>
 		<%= link_to 'Show', article_path(art) %> 
-		<% if art.username == current_user.username %>
+		<% if user_signed_in? && art.username == current_user.username %>
 			|
 			<%= link_to 'Edit', edit_article_path(art) %> |
 			<%= link_to 'Destroy', art, method: :delete, data: { confirm: 'Are you sure?' } %>
